@@ -1,3 +1,9 @@
+2017-09-03  Araki Ken  <arakiken@users.sf.net>
+
+	* im_m17nlib.c: XKeysymToString() is implemented.
+
+	* im_fcitx.c: fcitx_client_set_cursor_rect() is called in connected().
+
 2017-09-02  Araki Ken  <arakiken@users.sf.net>
 
 	* Makefile.in: vte, install-vte and clean-vte targets are added.
